<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_group"
        android:title="Groups" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="Calendar" />

    <item
        android:id="@+id/navigation_resources"
        android:icon="@drawable/ic_folder"
        android:title="Resources" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout"
        android:title="Logout" />
</menu>